--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "Urls": "http://localhost:8080",
+  "Urls": "https://localhost:8080",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
