--- a/Backend/DB/Appointment.json
+++ b/Backend/DB/Appointment.json
@@ -1,47 +1,52 @@
 [
     {
-        "ID": 7,
-        "Date": "01/02/2020",
-        "Time": "01:00",
-        "AttendedClientID": 80,
-        "LicensePlate": "123A",
-        "MechanicID": 69,
-        "AssistantID": 69
-    },
-    {
-        "ID": 7,
+        "ID": 1,
         "Date": "01/02/2020",
         "Time": "01:00",
         "AttendedClientID": 83,
         "LicensePlate": "123B",
         "MechanicID": 69,
-        "AssistantID": 69
+        "AssistantID": 69,
+        "SelectedBranch": 0
     },
     {
-        "ID": 7,
+        "ID": 2,
         "Date": "01/02/2020",
         "Time": "01:00",
         "AttendedClientID": 83,
         "LicensePlate": "123A",
         "MechanicID": 69,
-        "AssistantID": 69
+        "AssistantID": 69,
+        "SelectedBranch": 2
     },
     {
-        "ID": 7,
+        "ID": 3,
         "Date": "01/02/2020",
         "Time": "01:00",
         "AttendedClientID": 83,
         "LicensePlate": "123A",
         "MechanicID": 69,
-        "AssistantID": 69
+        "AssistantID": 69,
+        "SelectedBranch": 0
     },
     {
-        "ID": 7,
+        "ID": 4,
         "Date": "01/02/2020",
         "Time": "01:00",
         "AttendedClientID": 83,
         "LicensePlate": "123B",
         "MechanicID": 69,
-        "AssistantID": 69
+        "AssistantID": 69,
+        "SelectedBranch": 0
+    },
+    {
+        "ID": 5,
+        "Date": "01/01/2020",
+        "Time": "01:00",
+        "AttendedClientID": 83,
+        "LicensePlate": "ABC123",
+        "MechanicID": 69,
+        "AssistantID": 69,
+        "SelectedBranch": 69
     }
 ]
