--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="DotNetEnv" Version="2.3.0" />
     <PackageReference Include="SendGrid" Version="9.28.1" />
   </ItemGroup>
 </Project>
