--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -7,7 +7,7 @@
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="DotNetEnv" Version="2.3.0" />
-    <PackageReference Include="IronPdf" Version="2022.9.9056" />
+    <PackageReference Include="IronPdf.Linux" Version="2022.9.9056" />
     <PackageReference Include="SendGrid" Version="9.28.1" />
   </ItemGroup>
 </Project>
