--- a/Backend/DB/Appointment.json
+++ b/Backend/DB/Appointment.json
@@ -1,1 +1,81 @@
-[{"ID":1,"Date":"01/02/2020","Time":"01:00","AttendedClientID":1,"LicensePlate":"123A","BranchID":1,"RequiredService":1,"MechanicID":1,"AssistantID":20,"NecessaryParts":[2,3,4]},{"ID":2,"Date":"01/02/2020","Time":"01:00","AttendedClientID":2,"LicensePlate":"123B","BranchID":2,"RequiredService":2,"MechanicID":20,"AssistantID":1,"NecessaryParts":[1,5]},{"ID":3,"Date":"01/02/2020","Time":"01:00","AttendedClientID":3,"LicensePlate":"123A","BranchID":3,"RequiredService":3,"MechanicID":1,"AssistantID":20,"NecessaryParts":[]},{"ID":4,"Date":"01/02/2020","Time":"01:00","AttendedClientID":4,"LicensePlate":"123A","BranchID":4,"RequiredService":4,"MechanicID":20,"AssistantID":1,"NecessaryParts":[]},{"ID":5,"Date":"01/02/2020","Time":"01:00","AttendedClientID":4,"LicensePlate":"123A","BranchID":5,"RequiredService":5,"MechanicID":1,"AssistantID":20,"NecessaryParts":[]},{"ID":30,"Date":"01/01/2020","Time":"01:00","AttendedClientID":83,"LicensePlate":"ABC123","BranchID":32,"RequiredService":1,"MechanicID":69,"AssistantID":69,"NecessaryParts":[]}]
+[
+    {
+        "ID": 1,
+        "Date": "01/02/2020",
+        "Time": "01:00",
+        "AttendedClientID": 1,
+        "LicensePlate": "123A",
+        "BranchID": 1,
+        "RequiredService": 1,
+        "MechanicID": 1,
+        "AssistantID": 20,
+        "NecessaryParts": [
+            2,
+            3,
+            4
+        ]
+    },
+    {
+        "ID": 2,
+        "Date": "01/02/2020",
+        "Time": "01:00",
+        "AttendedClientID": 2,
+        "LicensePlate": "123B",
+        "BranchID": 2,
+        "RequiredService": 2,
+        "MechanicID": 20,
+        "AssistantID": 1,
+        "NecessaryParts": [
+            1,
+            5
+        ]
+    },
+    {
+        "ID": 3,
+        "Date": "01/02/2020",
+        "Time": "01:00",
+        "AttendedClientID": 3,
+        "LicensePlate": "123A",
+        "BranchID": 3,
+        "RequiredService": 3,
+        "MechanicID": 1,
+        "AssistantID": 20,
+        "NecessaryParts": []
+    },
+    {
+        "ID": 4,
+        "Date": "01/02/2020",
+        "Time": "01:00",
+        "AttendedClientID": 4,
+        "LicensePlate": "123A",
+        "BranchID": 4,
+        "RequiredService": 4,
+        "MechanicID": 20,
+        "AssistantID": 1,
+        "NecessaryParts": []
+    },
+    {
+        "ID": 5,
+        "Date": "01/02/2020",
+        "Time": "01:00",
+        "AttendedClientID": 4,
+        "LicensePlate": "123A",
+        "BranchID": 5,
+        "RequiredService": 5,
+        "MechanicID": 1,
+        "AssistantID": 20,
+        "NecessaryParts": []
+    },
+    {
+        "ID": 30,
+        "Date": "01/01/2020",
+        "Time": "01:00",
+        "AttendedClientID": 83,
+        "LicensePlate": "ABC123",
+        "BranchID": 32,
+        "RequiredService": 1,
+        "MechanicID": 69,
+        "AssistantID": 69,
+        "NecessaryParts": []
+    }
+]
