--- a/Backend/DB/Appointment.json
+++ b/Backend/DB/Appointment.json
@@ -1,33 +1,1 @@
-[
-    {
-        "ID": 1,
-        "Date": "01/01/2020",
-        "Time": "01:00",
-        "AttendedClientID": 1,
-        "LicensePlate": "ABC123",
-        "BranchID": 1,
-        "RequiredService": 1,
-        "MechanicID": 20,
-        "AssistantID": 1,
-        "NecessaryParts": [
-            1,
-            2,
-            6
-        ]
-    },
-    {
-        "ID": 2,
-        "Date": "01/01/2020",
-        "Time": "01:00",
-        "AttendedClientID": 2,
-        "LicensePlate": "ABC123",
-        "BranchID": 2,
-        "RequiredService": 2,
-        "MechanicID": 3,
-        "AssistantID": 2,
-        "NecessaryParts": [
-            3,
-            5
-        ]
-    }
-]
+[{"ID":1,"Date":"01/01/2020","Time":"01:00","AttendedClientID":1,"LicensePlate":"ABC123","BranchID":1,"RequiredService":1,"MechanicID":20,"AssistantID":1,"NecessaryParts":[1,2,6]},{"ID":2,"Date":"01/01/2020","Time":"01:00","AttendedClientID":2,"LicensePlate":"ABC123","BranchID":2,"RequiredService":2,"MechanicID":3,"AssistantID":2,"NecessaryParts":[3,5]},{"ID":23123,"Date":"312312","Time":"213123","AttendedClientID":231231,"LicensePlate":"231312","BranchID":12312312,"RequiredService":2312312,"MechanicID":23123,"AssistantID":123123,"NecessaryParts":[231231]}]
