avances en oatch y delete

--- a/Backend/DB/Appointment.json
+++ b/Backend/DB/Appointment.json
@@ -1,49 +1,1 @@
-[
-    {
-        "ID": 1,
-        "Date": "01/01/2020",
-        "Time": "01:00",
-        "AttendedClientID": 1,
-        "LicensePlate": "ABC123",
-        "BranchID": 1,
-        "RequiredService": 1,
-        "MechanicID": 20,
-        "AssistantID": 1,
-        "NecessaryParts": [
-            1,
-            2,
-            6
-        ]
-    },
-    {
-        "ID": 2,
-        "Date": "01/01/2020",
-        "Time": "01:00",
-        "AttendedClientID": 2,
-        "LicensePlate": "ABC123",
-        "BranchID": 2,
-        "RequiredService": 2,
-        "MechanicID": 3,
-        "AssistantID": 2,
-        "NecessaryParts": [
-            3,
-            5
-        ]
-    },
-    {
-        "ID": 2,
-        "Date": "01/01/2020",
-        "Time": "01:00 PM",
-        "AttendedClientID": 2,
-        "LicensePlate": "ABC123wwqs",
-        "BranchID": 3,
-        "RequiredService": 4,
-        "MechanicID": 1,
-        "AssistantID": 20,
-        "NecessaryParts": [
-            4,
-            5,
-            6
-        ]
-    }
-]
+[{"ID":12,"Date":"12","Time":"1","AttendedClientID":1,"LicensePlate":"eee321","BranchID":3,"RequiredService":4,"MechanicID":1,"AssistantID":1,"NecessaryParts":[90,89,76]}]
