--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -10,4 +10,7 @@
     <PackageReference Include="IronPdf" Version="2022.9.9056" />
     <PackageReference Include="SendGrid" Version="9.28.1" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Reports\" />
+  </ItemGroup>
 </Project>
