--- a/Backend/DB/Appointment.json
+++ b/Backend/DB/Appointment.json
@@ -1,18 +1,1 @@
-[
-    {
-        "ID": 1,
-        "Date": "01/01/2020",
-        "Time": "01:00",
-        "AttendedClientID": 1,
-        "LicensePlate": "ABC123",
-        "BranchID": 1,
-        "RequiredService": 4,
-        "MechanicID": 1,
-        "AssistantID": 3,
-        "NecessaryParts": [
-            1,
-            2,
-            6
-        ]
-    }
-]
+[{"ID":1,"Date":"01/01/2020","Time":"01:00","AttendedClientID":1,"LicensePlate":"ABC124","BranchID":1,"RequiredService":4,"MechanicID":1,"AssistantID":3,"NecessaryParts":[1,2,6]}]
